bdiscount-authentication-back.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bdiscount-authentication-back
  labels:
    app: bdiscount-authentication-back
spec:
  containers:
    - name: bdiscount-authentication-back
      image: tekxover/bdiscount-authentication-back:3.1
      ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: bdiscount-authentication-back
spec:
  type: NodePort
  selector:
    app: bdiscount-authentication-back
  ports:
    - port: 8080
      targetPort: 8080
