bdiscount-items-back.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  containers:
  - name: mongo
    image: mongo
    ports:
    - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---

apiVersion: v1
kind: Pod
metadata:
  name: bdiscount-items-back
  labels:
    app: bdiscount-items-back
spec:
  containers:
    - name: bdiscount-items-back
      image: tekxover/bdiscount-items-back:1.3
      ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: bdiscount-items-back
spec:
  type: NodePort
  selector:
    app: bdiscount-items-back
  ports:
    - port: 3000
      targetPort: 3000
