postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: NodePort
  selector:
    app: myservice 
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 31000
